kube_development/kube_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webservice
  namespace: plandar-development
  labels:
    app: webservice
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webservice
  template:
    metadata:
      labels:
        app: webservice
    spec:
      containers:
      - image: docker.pkg.github.com/ese6-individual-project-floris-feddema/companyservice/companyservice
        imagePullPolicy: IfNotPresent
        name: companyservice
        ports: 
        - containerPort: 80
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
      imagePullSecrets:
      - name: github-docker-registry
