kube_development/kube_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: companyservice
  namespace: plandar-development
spec:
  selector:
    app: companyservice
  ports:
  - port: 80
    targetPort: 80
